# tcc_ufrn

cart_pool/: requirements.txt
cart_pool/models/: policy.tch  target.tch
cart_pool/src_deep_rl/: cart_pole.py  dnq_model.py  main.py  q_learning.py  replay_memory.py  transition.py  utils.py
cart_pool/src_rl/: cart_pole.py  main.py
python/: .gitignore  dataset_test.npy  frederico_controller.py  main.py  memory.npy  memory_step_5.npy  near_samples.npy  near_samples_2.npy  near_samples_theta.npy  near_samples_wheel_vel.npy  pid.py  requirements.txt  rewards.csv  simulation.npy  tentativa_1.py  test.tch  test_ori.tch  train.py  train_model.py
python/coppeliasim/: coppeliasim.py
python/dense_model_environment/: weighs.h5
python/dense_model_kinematic/: weighs.data-00000-of-00001  weighs.h5  weighs.index
python/models/: checkpoint  kinematic.pt  kinematic.pth  kinematic.tch  linear.tch
python/simulation_data/: data.csv  (+6 more)
rust/smart_walker_controller/: Cargo.toml
rust/smart_walker_controller/assets/: data.csv  kinematic.pt
rust/smart_walker_controller/src/: benchmark.rs  collect_simulation_data.rs  main.rs  test_kinematic_model.rs
rust/smart_walker_controller/src/controller/: deep_learning_model.rs  frederico.rs  manual_controller.rs  mod.rs  nn_controller.rs  pid.rs
rust/smart_walker_controller/src/coppeliasimulation/: coppeliasim.rs  mod.rs  simple_scene_with_easy_obstacles.rs  target.rs
rust/smart_walker_controller/src/coppeliasimulation/coppeliasim_sensors/: accelerometer.rs  depth_kinect.rs  gyroscope.rs  mod.rs  rgb_kinect.rs
tcc/: main.tex
(+36 files in other folders)
